Fixed Alignment Issues

--- a/Client/src/styles/HomePage.css
+++ b/Client/src/styles/HomePage.css
@@ -3,6 +3,9 @@
     width: 100%;
     inset: 0;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 0;
     box-shadow: 20px 20px 200px 0px rgba(0, 0, 0,0.2);
     margin: 0;
