--- a/Client/src/styles/NavBar.css
+++ b/Client/src/styles/NavBar.css
@@ -2,9 +2,10 @@
 
 .nav-bar {
     display: flex;
-    justify-content: flex-start;
     padding-top: 5px;
+    padding-bottom: 5px;
     box-shadow: 0px 4px 20px -2px rgba(0, 0, 0, 0.2);
+    overflow-x: hidden;
     border: 1px solid transparent;
 }
 
@@ -14,7 +15,7 @@
     padding: 10px;
     font-size: 18px;
     font-weight: bold;
-    margin: 0 14px 0 ;
+    margin: 0 14px 0;
     color: #686b78;
     justify-content: center;
     align-items: center;
@@ -39,13 +40,12 @@
 
 .nav-location {
     display: flex;
-    margin-left: 1050px;
+    margin-left: auto; /* Pushes the location div to the right */
     font-family: arial, Helvetica Neue, sans-serif; 
     padding: 10px;
     font-size: 16px;
-    font-weight: 700px;
+    font-weight: 700;
     color: #686b78;
-
 }
 
 .location {
@@ -53,7 +53,7 @@
     justify-content: flex-start;
     align-items: center;
     background-color: rgb(209, 209, 209);
-    padding: 8px 30px 8px 30px;
+    padding: 8px 30px;
     border-radius: 20px;
     overflow: hidden;
 }
@@ -64,8 +64,8 @@
     fill: #686b78;
 }
 
-.location:hover svg{
-    fill:rgb(176, 0, 0);
+.location:hover svg {
+    fill: rgb(176, 0, 0);
 }
 
 .arrow-icon {
